--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UFT">
         <meta name="viewport"  content="width=device.width, intial-scale=1.0">
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-        <title>Vairag Fitnes</title>
+        <title>Vairag Fitness</title>
     </head>
     <body>
         <header class="text-gray-600 body-font">
